/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

import "AVStreamTypeEnum.proto";
import "AudioConfigData.proto";

package aasdk.proto.data;

message AVInputChannel {
  required enums.AVStreamType.Enum stream_type = 1;
  required AudioConfig audio_config = 2;
  optional bool available_while_in_call = 3;
}
