/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

message AVStreamType {
  enum Enum {
    NONE = 0;
    AUDIO = 1;
    VIDEO = 3;
  }
}
